# davp

./: .gitignore  Cargo.toml  HANDBOOK.txt  PLAN.md  README.md  STRUCTURE.md
.github/workflows/: release.yml
bootstrap_server/: Cargo.toml
bootstrap_server/src/: lib.rs  main.rs
src/: config.rs  lib.rs  main.rs  p2p.rs
src/gui/: mod.rs
src/modules/: api.rs  asset.rs  bootstrap.rs  certification.rs  cnt.rs  hash.rs  issuer_certificate.rs  metadata.rs  mod.rs  net_utils.rs  network.rs  p2p.rs  proof_storage.rs  settings.rs  signature.rs  storage.rs  verification.rs
tests/: issuer_certificate_regression_sample.rs  issuer_certificate_verify.rs  proof_roundtrip.rs
