[package]
name = "davp"
version = "0.1.0"
edition = "2021"
default-run = "davp"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
blake3 = "1"
bs58 = "0.5"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "1", features = ["rand"] }
eframe = "0.26"
rand = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
davp_bootstrap_server = { path = "bootstrap_server" }

[workspace]
members = ["bootstrap_server"]
