[package]
name = "davp_bootstrap_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bincode = "1.3"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "signal"] }
